CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LIBSDISP)


SET(LIBSDISP_VERSION_MAJOR 1)
SET(LIBSDISP_VERSION_MINOR 1)
SET(LIBSDISP_VERSION_MICRO 3)


SET(BUS_LIBS "i2c/i2c")

SET(DISPLAY_LIBS)
IF (WITH_DISPLAY_CRIUS)
	SET(DISPLAY_LIBS ${DISPLAY_LIBS} crius)
ENDIF()
IF (WITH_DISPLAY_SSD1306)
	SET(DISPLAY_LIBS ${DISPLAY_LIBS} ssd1306)
ENDIF()

FOREACH(b ${BUS_LIBS}) 
  SET(BUS_FILES ${BUS_FILES} bus/${b}.c )
ENDFOREACH(b)

FOREACH(d ${DISPLAY_LIBS}) 
  SET(DISPLAY_FILES ${DISPLAY_FILES} display/sdisp-${d}.c)
ENDFOREACH(d)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sdisp_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/sdisp_config.h)

SET(
	CMAKE_C_FLAGS 
	"-I ${CMAKE_CURRENT_SOURCE_DIR} -I ${CMAKE_CURRENT_SOURCE_DIR}/bus -I ${CMAKE_CURRENT_SOURCE_DIR}/bus/i2c/ -I ${CMAKE_CURRENT_SOURCE_DIR}/display/ -g -Wall -std=c99"
)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} -I ${CMAKE_CURRENT_SOURCE_DIR}/bus -I ${CMAKE_CURRENT_SOURCE_DIR}/bus/i2c/ -I ${CMAKE_CURRENT_SOURCE_DIR}/display/) # for generated config.h

MESSAGE(STATUS "libsdisp C_FLAGS: ${CMAKE_C_FLAGS}")



ADD_LIBRARY(sdisp sdisp.c sdisp-private.c ${BUS_FILES} ${DISPLAY_FILES})

IF (WITH_SHARED)
	ADD_LIBRARY(sdisp_shared SHARED sdisp.c sdisp-private.c ${BUS_FILES} ${DISPLAY_FILES})
ENDIF(WITH_SHARED)


INSTALL (FILES sdisp.h sdisp-version.h ${CMAKE_CURRENT_BINARY_DIR}/sdisp_config.h
	DESTINATION include
)
INSTALL (TARGETS sdisp
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

IF (WITH_SHARED)
	INSTALL (TARGETS sdisp_shared
		LIBRARY DESTINATION lib
		ARCHIVE DESTINATION lib
	)
ENDIF (WITH_SHARED)


